Changement du nom du fichier de base de donnée

--- a/db/config_database.yml
+++ b/db/config_database.yml
@@ -1,5 +1,5 @@
-development:
+authentification:
   adapter: sqlite3
-  database: "db/development.sqlite3"
+  database: "db/authentification.sqlite3"
   pool: 5
   timeout: 5000
